# STM32F746DISCO_Generator

./: CMakeLists.txt  STM32F746G_DISCO.ioc
Core/Inc/: main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
Core/Src/: main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c
STM32CubeIDE/: .cproject  .project  STM32F746G_DISCO Debug.cfg  STM32F746G_DISCO Debug.launch
STM32CubeIDE/Signal_gen/: signal_gen.c  signal_gen.h
Tests/: stm32_hal_mock.c  stm32_hal_mock.h  test_signal_gen.c
TouchGFX/: ApplicationTemplate.touchgfx.part  STM32F746DISCO_Generator.touchgfx
TouchGFX/assets/texts/: texts.xml
TouchGFX/gui/include/gui/screen1_screen/: Screen1Presenter.hpp  Screen1View.hpp
TouchGFX/gui/src/screen1_screen/: Screen1Presenter.cpp  Screen1View.cpp
cmake/stm32cubemx/: CMakeLists.txt
cmake/touchgfx/: CMakeLists.txt
